--- a/EDA_Attempt.ipynb
+++ b/EDA_Attempt.ipynb
@@ -2430,7 +2430,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##4. Visual Composition analysis"
+        "#Visual Composition Analysiss\n",
+        "\n",
+        "\n",
+        "After completing the data bias discovery phase, the next step focuses on analyzing the visual composition of the Nutrition5K dataset.\n",
+        "This step examines the color distribution and texture complexity of the dish images to understand their visual characteristics and consistency."
       ],
       "metadata": {
         "id": "LbZj_FruX9rG"
@@ -2677,6 +2681,48 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Result discusstions**\n",
+        "\n",
+        "**1. Average Color Distribution (Plot 1)**\n",
+        "\n",
+        "Description:\n",
+        "The first bar chart represents the mean RGB (Red, Green, Blue) intensity values calculated across all Nutrition5K sample images.\n",
+        "The values obtained are:\n",
+        "\n",
+        "Red (R): 118.43\n",
+        "\n",
+        "Green (G): 114.50\n",
+        "\n",
+        "Blue (B): 110.16\n",
+        "\n",
+        "Analysis:\n",
+        "These results show that all three color channels have fairly similar intensity levels, with red being slightly more dominant and blue slightly lower.\n",
+        "This balance indicates that the dataset’s images generally have a neutral, natural color tone — neither overly bright nor overly tinted towards any color.\n",
+        "Such a distribution suggests that the dataset is visually consistent, which is beneficial for computer vision models since strong color biases (like overly saturated reds or greens) could distort feature learning.\n",
+        "\n",
+        "**2. Average Texture Complexity (Plot 2)**\n",
+        "\n",
+        "Description:\n",
+        "The second bar chart displays the average texture magnitude (edge strength) computed using the Sobel operator, which detects edges and fine details in images.\n",
+        "The calculated mean texture value is 0.0404 (on a 0–1 scale).\n",
+        "\n",
+        "**Analysis:**\n",
+        "A mean edge strength of 0.04 is relatively low, suggesting that most Nutrition5K images are smooth, with moderate detail levels rather than containing heavy textures or sharp contrasts.\n",
+        "This reflects the nature of food photography, where dishes are usually captured under controlled lighting with soft focus and minimal background noise.\n",
+        "However, this also implies that models trained on this dataset might learn more from color and shape cues than from texture variations.\n",
+        "\n",
+        "**Summary Insight:**\n",
+        "\n",
+        "Together, these visual composition metrics confirm that the Nutrition5K dataset maintains good visual consistency — moderate brightness, balanced colors, and relatively low textural noise.\n",
+        "Such uniformity supports fairness and stability in downstream image-based nutritional estimation models, minimizing bias caused by extreme lighting or color dominance.  "
+      ],
+      "metadata": {
+        "id": "o6chArqvZbJC"
+      }
     },
     {
       "cell_type": "code",
