--- a/EDA_Attempt.ipynb
+++ b/EDA_Attempt.ipynb
@@ -2993,6 +2993,17 @@
     {
       "cell_type": "markdown",
       "source": [
+        "The visual composition distributions for the Nutrition5k sample reveal that the dataset maintains a high degree of visual uniformity across all analyzed features. The average RGB intensities (Red ≈ 120, Green ≈ 115, Blue ≈ 111) are closely clustered, indicating well-balanced lighting and color exposure without strong dominance of any color channel. This suggests that the images were captured under controlled lighting conditions, producing neutral and realistic color tones typical of lab-based food photography. Meanwhile, the center of mass (CoM) results for both horizontal and vertical axes are tightly centered around 0.49 ± 0.02, confirming that nearly all dishes are symmetrically positioned in the center of the frame.\n",
+        "\n",
+        "Overall, these metrics highlight that Nutrition5k’s imagery is visually standardized, color-balanced, and compositionally centered. While this controlled setup enhances dataset quality for computer vision experiments, it also introduces a presentation bias—the dataset favors uniform, studio-style images and lacks the natural variability found in real-world, culturally diverse food photos, which can be different from our dataset's photos that focused on many angles. As a result, models trained solely on this data may perform well under consistent conditions but may inconsistent when it comes to real life examples."
+      ],
+      "metadata": {
+        "id": "kuFlfYwIbdl_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# PRIMARY DATA :"
       ],
       "metadata": {
