--- a/Data_cleaning_final.ipynb
+++ b/Data_cleaning_final.ipynb
@@ -1735,6 +1735,41 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#**Step 8 — Ingredient Encoding**\n",
+        "\n",
+        "Objective:\n",
+        "This step transforms the standardized ingredient lists into a machine-readable format suitable for modeling and analysis. Each unique ingredient is converted into a binary (multi-hot) encoding column that indicates whether the ingredient appears in each dish.\n",
+        "\n",
+        "What was done:\n",
+        "\n",
+        "\n",
+        "1.   Ingredient Parsing:\n",
+        "The parse_ingredients() helper function converted each ingredient entry—whether stored as a list, string, or pipe-separated text—into a consistent Python list.\n",
+        "\n",
+        "2.   Vocabulary Creation:\n",
+        "All unique ingredients across the dataset were extracted to build an ingredient vocabulary used for encoding.\n",
+        "\n",
+        "3.   Multi-Hot Encoding:\n",
+        "For each unique ingredient, a new column (ing_<ingredient_name>) was added to the dataset, containing 1 if the ingredient is present in the dish and 0 otherwise.\n",
+        "\n",
+        "4.   Outputs Generated:\n",
+        "\n",
+        "> dataset_with_ingredient_encoding.csv → complete dataset with original columns + encoding\n",
+        "\n",
+        "> ingredient_encoding_columns_only.csv → only the ingredient binary matrix\n",
+        "\n",
+        "> ingredient_vocabulary.csv → full list of unique standardized ingredients\n",
+        "\n",
+        "*Purpose:\n",
+        "This encoding allows machine-learning models to interpret the ingredient composition of dishes numerically, enabling tasks such as similarity analysis, clustering, and dish classification.*"
+      ],
+      "metadata": {
+        "id": "mexT0E0i25RU"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# === Ingredient Encoding Only - Keep All Original Columns ===\n",
@@ -1963,7 +1998,7 @@
       "metadata": {
         "id": "r5qUsD9LNwR2"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2013,7 +2048,7 @@
           "height": 145
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2266,7 +2301,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2308,7 +2343,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2360,7 +2395,7 @@
       "metadata": {
         "id": "f54zHFQsOlpa"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2459,7 +2494,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2530,7 +2565,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2595,7 +2630,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2668,7 +2703,7 @@
       "metadata": {
         "id": "_XH23s8vM0Od"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2713,7 +2748,7 @@
       "metadata": {
         "id": "-RKf3KrFM35O"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2727,7 +2762,7 @@
       "metadata": {
         "id": "LzG0ZbKgM7HR"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2780,7 +2815,7 @@
       "metadata": {
         "id": "3iqbLtGVM_wr"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2823,7 +2858,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2861,7 +2896,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2980,7 +3015,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3057,7 +3092,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3146,7 +3181,7 @@
           "height": 494
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
