--- a/Data_cleaning_final.ipynb
+++ b/Data_cleaning_final.ipynb
@@ -1737,7 +1737,26 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**Step 8 — Ingredient Encoding**\n",
+        "# **Step 8: Manual Dish Name Cleaning**\n",
+        "\n",
+        "\n",
+        "what we did and why:\n",
+        "\n",
+        "After the automated dish name cleaning, we manually reviewed all names because some were incorrectly translated, some were accidentally truncated by the cleaning process, and others still contained unnecessary descriptions.\n",
+        "\n",
+        "\n",
+        "the outcome:\n",
+        "\n",
+        "This manual correction ensured that all dish names are accurate, complete, and consistently formatted for further analysis."
+      ],
+      "metadata": {
+        "id": "4bHV06X9Rbfw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**Step 9 — Ingredient Encoding**\n",
         "\n",
         "Objective:\n",
         "This step transforms the standardized ingredient lists into a machine-readable format suitable for modeling and analysis. Each unique ingredient is converted into a binary (multi-hot) encoding column that indicates whether the ingredient appears in each dish.\n",
@@ -1932,26 +1951,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Step 8: Manual Dish Name Cleaning**\n",
-        "\n",
-        "\n",
-        "what we did and why:\n",
-        "\n",
-        "After the automated dish name cleaning, we manually reviewed all names because some were incorrectly translated, some were accidentally truncated by the cleaning process, and others still contained unnecessary descriptions.\n",
-        "\n",
-        "\n",
-        "the outcome:\n",
-        "\n",
-        "This manual correction ensured that all dish names are accurate, complete, and consistently formatted for further analysis."
-      ],
-      "metadata": {
-        "id": "4bHV06X9Rbfw"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#  3 – Image Processing:\n",
+        "# **3– Image Processing:**\n",
         "image preprocessing is an essential stage before any data analysis or machine-learning model training.\n",
         "\n",
         "The main goal is to make sure that all images are clean, consistent, and properly formatted for model input.\n",
