--- a/EDA_Attempt.ipynb
+++ b/EDA_Attempt.ipynb
@@ -50,7 +50,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -223,7 +223,7 @@
         "id": "tUkSpgdzo8a1",
         "outputId": "0380c882-ad66-4873-8fa3-8de955befffa"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1711,7 +1711,7 @@
           "height": 1000
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2131,7 +2131,7 @@
           "height": 1000
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2528,7 +2528,7 @@
         "id": "Nqr_O_L2pRB8",
         "outputId": "afb0517b-a3b9-453d-9fae-1015ffacfaba"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2853,7 +2853,7 @@
         "id": "n5AGRFesp7HU",
         "outputId": "0f22ca22-7c92-48d5-c3ea-bd99e7660be6"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3250,7 +3250,7 @@
           "height": 1000
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3501,7 +3501,7 @@
           "height": 683
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3892,7 +3892,7 @@
           "height": 1000
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4203,7 +4203,7 @@
           "height": 1000
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4319,11 +4319,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "From the comparative analysis conducted above, we notice some distinction between our data and the general food patterns found in Nutrition5K. The higher mean intensity of the red and green colors in the Saudi dataset can be attributed to the generous and frequent use of spices, such as tumeric and saffron, as well as aromatic herbs in the preparation of many traditional Saudi dishes.\n",
+        "From the comparative analysis, clear visual differences emerge between the Saudi cuisine dataset and the Nutrition5K dataset. Saudi dishes show noticeably higher red and green color intensities, indicating a warmer and more vibrant color palette. This aligns with the common use of spices such as turmeric, saffron, and aromatic herbs that naturally enhance these color channels. In contrast, Nutrition5K dishes exhibit more neutral and less saturated tones.\n",
         "\n",
-        "Furthermore, the higher average texture in Saudi food is representative of the traditional plating style of Saudi dishes where components such as rice, meat, and toppings are piled rather than scattered like in Western dishes.\n",
+        "In terms of visual texture, Saudi dishes display a higher average texture complexity. This reflects the natural structure of many Saudi meals, which often include layered or mixed components such as rice, meats, and toppings that create more visual detail. Nutrition5K samples, which largely represent Western-style dishes, appear smoother and more uniform by comparison.\n",
         "\n",
-        "These findings suggest that our model will need to be better attuned to the texture-based traits and wamer color palettes of the Saudi cuisine.  "
+        "The plating balance analysis shows that both datasets are centered similarly along the horizontal and vertical axes, but Saudi dishes are slightly more centered on average. This suggests a consistent plating tendency in both datasets with only marginal variation.\n",
+        "\n",
+        "Overall, these findings highlight that Saudi dishes differ most strongly in color intensity and texture richness. As a result, any classification or recognition model trained on this data will need to accommodate these distinct characteristics to perform effectively."
       ],
       "metadata": {
         "id": "JnAkT73GzcZ1"
