--- a/EDA_Attempt.ipynb
+++ b/EDA_Attempt.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3346,41 +3347,43 @@
       "source": [
         "# Key Findings :\n",
         "\n",
-        "1. Ingredient Patterns\n",
-        "\t•\tThe dataset includes 278 records and 228 unique dishes.\n",
-        "\t•\tEach dish contains an average of 4.8 ingredients.\n",
-        "\t•\tRice is the most frequently used ingredient, appearing in 7.1% of all ingredient mentions, followed by salt (6.6%), olive oil (5.6%), onion (4.4%), and chicken (4.2%).\n",
-        "\t•\tThe top 20 ingredients cover most of the dataset’s ingredient usage, reflecting the strong reliance on a limited set of core ingredients in Saudi cuisine.\n",
+        "**Ingredient Frequency**\n",
         "\n",
-        "2. Ingredient Category Distribution\n",
-        "\t•\tThe largest ingredient group is “Other” (587 occurrences), followed by Spices (209), Protein (146), Grains (134), Vegetables (118), Fats (75), and Dairy (60).\n",
-        "\t•\tThis shows that Saudi dishes are spice-heavy with a balance of proteins and grains, while dairy and fats are used more selectively.\n",
+        "- Rice (20%) – the most dominant base ingredient in Saudi main dishes like Kabsa and Mandi.\n",
         "\n",
-        "3. Anomaly Detection\n",
-        "\t•\t25 dishes had an unusually high or low ingredient count (e.g., Kabsa – 20 ingredients, Basbousa – 14 ingredients).\n",
-        "\t•\t27 duplicate dishes were identified, indicating some redundancy that may need cleaning.\n",
-        "\t•\tMost dishes have 3–5 ingredients, suggesting that Saudi dishes are relatively simple but can range widely in complexity.\n",
+        "- Chicken (13.9%) & meat (9.4%) – major protein sources that appear across many traditional dishes.\n",
         "\n",
-        "4. Correlation & Co-occurrence\n",
-        "\t•\tStrongest positive correlations between ingredients include:\n",
-        "\t•\tSalt ↔ num_ingredients (0.83)\n",
-        "\t•\tGarlic ↔ Cloves (0.82)\n",
-        "\t•\tGarlic ↔ num_ingredients (0.81)\n",
-        "\t•\tSalt ↔ Olive oil (0.77)\n",
-        "\t•\tOnion ↔ num_ingredients (0.77)\n",
-        "\t•\tThese indicate that garlic, salt, and olive oil often co-occur and are central to Saudi cooking bases.\n",
+        "- Salad ingredients (7.1%) & pastries (5.3%) – commonly used in side dishes and appetizers.\n",
         "\n",
-        "5. Dish Clustering & Complexity\n",
-        "\t•\tPCA analysis showed clear clustering patterns based on ingredient usage (explained variance ≈ 33.1%).\n",
-        "\t•\tDishes were categorized by complexity:\n",
-        "\t•\tSimple: 222 dishes, avg. 2.6 ingredients\n",
-        "\t•\tMedium: 45 dishes, avg. 12.4 ingredients\n",
-        "\t•\tComplex: 11 dishes, avg. 18.2 ingredients\n",
-        "\t•\tThis reveals a predominance of simple recipes, with a smaller number of highly elaborate dishes.\n",
+        "- Ingredients like pudding, vegetables, Jareesh, bread, soup (2.5–3.5%) – moderately frequent, showing variety in dish types.\n",
         "\n",
-        "6. Data Quality\n",
-        "\t•\t100% completeness: all dishes have ingredient lists.\n",
-        "\t•\tHowever, duplicate names and ingredient count anomalies require minor preprocessing refinement.\n"
+        "- Rare items (<1%): sambusa, fish, saleeg, pepper, hummus, Shakshuka – used in fewer, more specific dishes.\n",
+        "\n",
+        "Overall: Saudi cuisine is heavily centered on grains and proteins, with rice leading all ingredients.\n",
+        "\n",
+        "**Ingredient Co-occurrence**\n",
+        "\n",
+        "- Rice ↔ Chicken (0.52) – strongest pairing, reflecting how common mixed rice-and-protein dishes are.\n",
+        "\n",
+        "- Jareesh ↔ Goursan (0.37) – strong relationship typical in traditional grain-based dishes.\n",
+        "\n",
+        "- Meat shows moderate pairing with chicken and vegetables, showing they often appear together.\n",
+        "\n",
+        "- Dessert ingredients have weak or negative correlations with main dish ingredients, meaning desserts use separate ingredient sets.\n",
+        "\n",
+        "Overall: Ingredients form clear clusters (rice–protein cluster, Jareesh–Goursan cluster, dessert cluster), showing structured recipe patterns.\n",
+        "\n",
+        "**Ingredient Category Distribution**\n",
+        "\n",
+        "- Protein (115) – the most common category, reinforcing the heavy use of meat and chicken.\n",
+        "\n",
+        "- Other (99) & Grains (94) – widely used base components including rice, flour, and miscellaneous staples.\n",
+        "\n",
+        "- Dessert category (60) – shows the strong presence of traditional Saudi sweets.\n",
+        "\n",
+        "- Vegetables (22) & Dairy (5) – used far less, indicating a cuisine style focused more on grains/protein than fresh produce.\n",
+        "\n",
+        "Overall: Saudi dishes lean toward protein- and grain-rich recipes, with desserts also important, while vegetables/dairy play a smaller role."
       ],
       "metadata": {
         "id": "G-Ry2lwFFk3R"
@@ -3391,40 +3394,36 @@
       "source": [
         "# EXPLANATION OF ANALYSIS APPROACH :\n",
         "\n",
+        "EXPLANATION OF ANALYSIS APPROACH :\n",
         "WHAT THIS ANALYSIS DOES:\n",
         "\n",
-        "This exploratory data analysis (EDA) investigates patterns and composition in the Saudi Cuisine Dataset, using multiple analytical perspectives to understand dish variety, ingredient usage, and data consistency.\n",
-        "\n",
+        "This exploratory data analysis (EDA) focuses on understanding dish complexity within the Saudi Cuisine Dataset by examining the number of ingredients used in each recipe. The analysis highlights which dishes require the most components and identifies variation in recipe richness across the dataset.\n",
         "\n",
         "1. DATA PREPARATION:\n",
-        "\t•\tLoads the standardized Saudi cuisine metadata file (SaudiFoodFile_standardized_consistentM.csv).\n",
-        "\t•\tConverts string-based ingredient columns into structured Python lists.\n",
-        "\t•\tCalculates the number of ingredients per dish to measure recipe complexity.\n",
-        "\t•\tPrepares data for visualization and summary analysis.\n",
         "\n",
+        "Loads the standardized Saudi cuisine metadata file (SaudiFoodFile_standardized_consistentM.csv).\n",
         "\n",
-        "2. DISH DISTRIBUTION ANALYSIS:\n",
-        "\t•\tIdentifies the Top 15 most frequent Saudi dishes.\n",
-        "\t•\tVisualizes dish frequency to reveal popular and culturally significant recipes.\n",
-        "\t•\tHelps detect dominant dish types (main courses vs. desserts).\n",
+        "Converts ingredient strings into structured Python lists using safe parsing.\n",
         "\n",
+        "Computes the number of ingredients per dish to quantify recipe complexity.\n",
         "\n",
-        "3. INGREDIENT PATTERN ANALYSIS:\n",
-        "\t•\tExtracts all unique ingredients and identifies the Top 15 most common ones.\n",
-        "\t•\tAnalyzes the distribution of ingredients per dish to show simplicity or complexity in Saudi recipes.\n",
-        "\t•\tVisualizes frequency trends of core ingredients such as rice, salt, olive oil, and chicken.\n",
+        "Prepares clean, structured features for further aggregation and visualization.\n",
         "\n",
+        "2. DISH COMPLEXITY ANALYSIS:\n",
         "\n",
-        "4. DISH COMPLEXITY ANALYSIS:\n",
-        "\t•\tCalculates the average number of ingredients for each dish.\n",
-        "\t•\tRanks dishes by complexity to identify the Top 15 most complex recipes (e.g., Shawarma, Maqlooba).\n",
-        "\t•\tHighlights how ingredient count relates to preparation depth.\n",
+        "Groups dishes by name and calculates the average number of ingredients for each one.\n",
         "\n",
+        "Ranks dishes based on their complexity score (mean ingredient count).\n",
         "\n",
-        "5. INGREDIENT CO-OCCURRENCE ANALYSIS:\n",
-        "\t•\tBuilds a correlation heatmap to study how ingredients commonly appear together.\n",
-        "\t•\tIdentifies strong co-usage pairs (e.g., salt ↔ olive oil, onion ↔ garlic).\n",
-        "\t•\tReveals the underlying flavor base and complementary ingredient relationships in Saudi cuisine."
+        "Identifies the Top 15 most complex dishes, i.e., dishes requiring the largest number of ingredients across their entries.\n",
+        "\n",
+        "Visualizes these complex dishes using a horizontal bar chart with a clean blue color palette.\n",
+        "\n",
+        "3. OUTPUT & VISUALIZATION:\n",
+        "\n",
+        "Generates a professional graph showing which Saudi dishes have the richest ingredient lists.\n",
+        "\n",
+        "Provides a quick overview of culinary complexity, helping highlight dishes that are preparation-intensive."
       ],
       "metadata": {
         "id": "U4C1d9gdFl69"
@@ -3535,38 +3534,39 @@
       "source": [
         "# Key Findings :\n",
         "\n",
-        "1.\tDish Frequency Analysis\n",
-        "The dataset contains 278 records and 228 unique dishes. The most frequent dishes identified are Kabsa, Jareesh, Margoog, Basbousa, and Mandi. These popular dishes are mainly rice-based, reflecting the cultural importance of grains in Saudi cuisine. Dishes with higher frequency tend to represent traditional main meals, whereas those with lower frequency are typically desserts or side dishes.\n",
+        "**Dish Complexity Analysis**\n",
         "\n",
+        "**Dataset Overview**\n",
         "\n",
+        "The complexity analysis covers 270 dishes, focusing on the average number of ingredients per dish. Complexity is measured using the ingredient count, allowing us to identify which dishes require more preparation steps and richer ingredient profiles.\n",
         "\n",
-        "2.\tIngredient Pattern Analysis\n",
-        "The analysis revealed 15 key ingredients that dominate Saudi cuisine: rice, salt, olive oil, onion, chicken, garlic, pepper, tomato, lemon, water, cloves, butter, parsley, cinnamon, and lamb. Among these, rice, salt, and olive oil serve as the core base ingredients for most recipes. The presence of spices such as cloves, cinnamon, and parsley highlights the distinctive flavor richness of Saudi dishes. Meanwhile, protein sources like chicken and lamb are highly represented, showing the cuisine’s emphasis on hearty, balanced meals.\n",
+        "**Most Complex Dishes**\n",
         "\n",
+        "The top complex dishes in the dataset include Chicken Badya, Hashi Badya, Lamb Badya, Burd Chicken, Chicken Kabab with Rice, and Shawarma Bowl.\n",
+        "-  These dishes have the highest average ingredient count, ranging between 3–4 ingredients.\n",
+        "- Their elevated complexity comes from mixed components such as proteins, rice, spices, and sauces.\n",
+        "- Dishes in this category typically require multi-step cooking methods such as marination, layering, sautéing, or combining multiple components.\n",
         "\n",
+        "**Moderately Complex Dishes**\n",
         "\n",
-        "3.\tIngredient Count Distribution\n",
-        "• Most dishes include 2–5 ingredients, showing that many recipes are simple and straightforward.\n",
-        "• A few elaborate dishes such as Kabsa and Mansaf contain more than 15 ingredients, categorizing them as complex or festive meals.\n",
-        "• The distribution is right-skewed, confirming that simple dishes dominate the dataset while complex recipes are less common.\n",
+        "Dishes such as Chipotle Chicken Bowl, Meat Kebab with Rice, Lamb Tagine, and Maqluba With Lamb fall in the moderate complexity range.\n",
+        "- These dishes include around 3 ingredients on average, reflecting balanced use of proteins, grains, and simple seasoning.\n",
+        "- Their preparation involves standard cooking processes like grilling, simmering, or mixing cooked components.\n",
         "\n",
+        "Simpler Dishes\n",
         "\n",
+        "Kabsa, Chicken Grill, and Margog fall into the simpler category with fewer ingredients compared to the previous groups.\n",
+        "- These dishes average around 2.3–2.5 ingredients according to the dataset representation.\n",
+        "- Although culturally known as rich or layered dishes, the dataset version lists only the essential core components, making them appear simpler in this analysis.\n",
+        "- Simpler recipes generally represent quick or traditional meals with minimal preparation complexity.\n",
         "\n",
-        "4.\tDish Complexity\n",
-        "• The most complex dishes identified are Beef Shawarma, Cart Chicken, Chicken & Flatbread, Maqlooba with Lamb, and Mansaf.\n",
-        "• Complex dishes typically involve multi-step preparation, marination, or sauces, requiring a higher number of ingredients.\n",
-        "• In contrast, simpler dishes like desserts and beverages use fewer ingredients and involve minimal cooking steps.\n",
+        "**Overall Complexity Pattern**\n",
         "\n",
-        "\n",
-        "\n",
-        "5.\tIngredient Co-occurrence Relationships\n",
-        "• Strong positive correlations were observed between key ingredients:\n",
-        "– Salt ↔ Olive oil → 0.77\n",
-        "– Onion ↔ Garlic → 0.66\n",
-        "– Salt ↔ Garlic → 0.71\n",
-        "– Rice ↔ Chicken → 0.43\n",
-        "• These relationships indicate common flavor foundations and complementary ingredient pairings frequently used in Saudi cooking.\n",
-        "• Minimal negative correlations were found, showing that ingredients are broadly compatible across different recipes."
+        "- Most Saudi dishes fall between 2–4 ingredients, suggesting a tendency toward straightforward recipes with focused flavors.\n",
+        "- Only a small number of dishes qualify as highly complex, showing that elaborate meals are less common.\n",
+        "- Complex dishes are usually meat- and rice-based, while simpler dishes include items like grills, soups, and traditional stews.\n",
+        "- This distribution highlights the balance between simple everyday dishes and richer, ceremonial meals within Saudi cuisine.\n",
+        "\n"
       ],
       "metadata": {
         "id": "USu6ADTcFzFJ"
@@ -3939,30 +3939,40 @@
       "source": [
         "# Key Findings :\n",
         "\n",
-        "1.\tColor Distribution (R/G/B Channels)\n",
-        "The Saudi Cuisine dataset shows a balanced color composition with slight dominance in warm tones (Red mean ≈ 179.16), followed by Green (151.32) and Blue (129.04).\n",
-        "This indicates that many dishes contain ingredients and plating styles rich in browns, yellows, and reds, typically associated with cooked grains, meats, and spices.\n",
-        "The moderate variation (standard deviation ≈ 50–70) suggests visual diversity among dishes but with consistent color harmony.\n",
         "\n",
+        "**Color Channel Distribution (RGB)**\n",
         "\n",
+        "- The Red channel has a mean intensity of 179, indicating warmer tones are highly present in the dataset. This reflects the appearance of dishes rich in spices, rice, and meat.\n",
+        "- The Green channel averages 153, showing moderate green tones common in herbs, vegetables, and salads.\n",
+        "- The Blue channel has the lowest mean (129), suggesting blue tones are the least dominant in food photography, consistent with natural food coloration.\n",
+        "- All three channels show wide, diverse distributions, meaning images vary significantly in lighting and ingredients.\n",
+        "- Overall, the dataset leans toward warm, rich color palettes typical of traditional Saudi cuisine.\n",
         "\n",
-        "2.\tTexture Magnitude Analysis\n",
-        "The average edge strength is 0.0478, indicating moderate surface detail across dishes.\n",
-        "Dishes show visible texture—neither too flat nor overly detailed—suggesting balanced presentation between smooth sauces and textured toppings.\n",
-        "Texture distribution is wide, representing both soft desserts and detailed main dishes such as Kabsa and Shawarma.\n",
+        "**Texture Magnitude Distribution**\n",
         "\n",
+        "- The mean edge strength is 0.0478, indicating moderate texture across the images.\n",
+        "- Dishes with grains, rice, shredded meat, or layered ingredients contribute to higher texture values.\n",
+        "- Smooth dishes like soups or puddings lower the texture values, creating a balanced distribution.\n",
+        "- The wide spread of texture magnitudes shows that the dataset includes both highly textured main dishes and visually smoother foods.\n",
         "\n",
+        "**Center of Mass (CoM) | Horizontal Position**\n",
         "\n",
-        "3.\tSpatial Composition (Center of Mass)\n",
-        "The horizontal (X) and vertical (Y) centers of mass both average around 0.50, meaning that the dishes are well-centered in their images.\n",
-        "This demonstrates high photographic consistency, with most dishes framed symmetrically.\n",
-        "Low standard deviation (≈0.02) confirms that there are no major shifts or cropping biases in the visual dataset.\n",
+        "- The horizontal CoM mean is 0.50, almost exactly centered.\n",
+        "- This indicates that dishes are typically placed symmetrically in the middle of the frame.\n",
+        "- The very small standard deviation (~0.02) shows high uniformity, meaning most images follow a consistent framing style.\n",
         "\n",
+        "**Center of Mass (CoM) | Vertical Position**\n",
         "\n",
+        "- The vertical CoM mean is also 0.50, matching the horizontal centering.\n",
+        "- Dishes are positioned evenly from top to bottom, reflecting controlled and consistent photographic composition.\n",
+        "- The tight clustering around the center confirms minimal variation in dish placement.\n",
         "\n",
+        "**Overall Visual Composition Pattern**\n",
         "\n",
-        "4.\tOverall Insights\n",
-        "The Saudi cuisine images exhibit natural color warmth, balanced framing, and moderate textural detail."
+        "- The dataset shows strong consistency in framing and centering, suggesting images were captured under similar photographic conditions.\n",
+        "- Color distributions emphasize warm, spice-rich tones, aligned with Saudi cuisine characteristics.\n",
+        "- Texture variability highlights the diversity of dish types — from smooth desserts to textured rice and meat dishes.\n",
+        "- The combination of centered subjects and controlled lighting enhances the dataset’s visual uniformity and clarity."
       ],
       "metadata": {
         "id": "425Aj-LgF5pL"
